fixes div height on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -235,6 +235,7 @@ nav a:hover {
     align-items: flex-start;
     max-width: 100vw;
     overflow-x: auto;
+    overflow-y: hidden;
     flex-flow: nowrap;
     -webkit-overflow-scrolling: touch;
 }
@@ -245,6 +246,10 @@ nav a:hover {
     align-items: flex-start;
     flex-flow: row wrap;
     width: 800px;
+}
+
+#updateReview {
+    display: block;
 }
 
 h1 {
@@ -264,11 +269,11 @@ h1 {
     border-radius: 15px;
     margin: 5px;
     width: 400px;
-    min-height: 705px;
     background: radial-gradient(rgb(150, 150, 150), rgba(0, 24, 92, 0.85));
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     color: white;
     flex: 0 0 auto;
+    overflow-y: hidden;
 }
 
 #individual-ice-cream img {
@@ -554,6 +559,8 @@ footer {
     #rating-form button {
         background: none;
         border: none;
+        width: 30px;
+        height: 30px;
         outline: none;
     }
     
@@ -606,11 +613,29 @@ footer {
     
     .swiper-container {
         width: 100%;
+        height: max-content;
+        overflow-y: hidden;
       }
 
     .swiper-pagination {
         position: fixed !important;
         bottom: 25px !important;
+    }
+
+    #ice-cream-flex {
+        height: max-content;
+    }
+
+    button i {
+        width: 15px;
+        height: 15px;
+        font-size: 25px !important;
+        margin: 0px;
+        padding: 0;
+        transition: all 0.1s ease-in;
+        color: transparent;
+        -webkit-text-stroke: 1px rgb(0, 0, 0, 0.5);
+        outline: black;
     }
 }
 
@@ -649,7 +674,7 @@ footer {
 
     #individual-ice-cream {
         width: 300px;
-        min-height: 600px;
+        height: 100%;
     }
 
     #rating-form {
